kustomize/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release
  labels:
    app.kubernetes.io/name: release
    app.kubernetes.io/instance: instance
    app.kubernetes.io/managed-by: Terraform Kustomize
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: release
      app.kubernetes.io/instance: instance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: release
        app.kubernetes.io/instance: instance
    spec:
      containers:
        - name: app
          image: image
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
