kustomize/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release
  labels:
    app.kubernetes.io/name: release
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/managed-by: Kustomize
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: release
    app.kubernetes.io/instance: instance
